@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-28T01:08:13Z",
-  "count_outdated" : 1159,
-  "uniques_outdated" : 734,
-  "count" : 1184,
-  "uniques" : 749,
+  "timestamp" : "2024-01-28T08:17:41Z",
+  "count_outdated" : 1160,
+  "uniques_outdated" : 735,
+  "count" : 1185,
+  "uniques" : 750,
   "clones" : [
-    {
-      "timestamp": "2024-01-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
@@ -109,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
