@@ -1,12 +1,7 @@
 {
   "count": 25,
-  "uniques": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-01-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
@@ -60,6 +55,11 @@
     {
       "timestamp": "2024-01-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
