@@ -1,3 +1,12 @@
+2024-01-28T08:17:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7684462923 # 64
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
+* notice: last 14d: unq all: 4 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 734 1159 / 749 1184
+* notice: next accum: outdated-unq outdated-all / unq all: 735 1160 / 750 1185
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-01-14] / [2024-01-28]
+
 2024-01-28T01:08:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7682375884 # 63
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
